--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: title-font;
+    src: url("title-font.ttf");
+}
+
 div {
     padding: 0;
     margin: 0;
@@ -27,14 +32,14 @@ button {
 }
 
 h1 {
-    font-family: 'Futura', sans-serif;
+    font-family: title-font;
     font-weight: 100;
     color: #FFB1B1;
     text-align: center;
 }
 
 h3 {
-    font-family: 'Futura';
+    font-family: title-font;
     font-weight: 100;
     font-size: 15pt;
     letter-spacing: 2px;
@@ -89,7 +94,6 @@ ul {
 }
 
 .title {
-    font-family: 'Futura', sans-serif;
     font-weight: 100;
     color: white;
 }
