Add translated title for contact-section

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -81,7 +81,7 @@
     </div>
 </div>
 <div class="footer">
-    <h3 class="title">KONTAKT</h3>
+    <h3 class="title">{{ loc['contact_0'] }}</h3>
     <div class="contact">
         <div>
             <p>{{ loc['contact_1'] }}:</p>
@@ -90,7 +90,7 @@
             <p>Ann Helen Brendehaug</p>
             <p>{{ loc['contact_5'] }}: annhelen@bokvennen.no</p>
             {% if lang == 'NO' %}
-            <p>Telefon: 123 45 678</p>
+            <p>Telefon: 915 84 783</p>
             {% endif %}
         </div>
     </div>
@@ -112,9 +112,9 @@
         </div>
         <div>
             <p>Miriam Mackmin</p>
-            <p>{{ loc['contact_5'] }}: adresse@domene.no</p>
+            <p>{{ loc['contact_5'] }}:</p>
             {% if lang == 'NO' %}
-            <p>Telefon: 123 45 678</p>
+            <p>Telefon: (+44) 7435 123308</p>
             {% endif %}
         </div>
     </div>
@@ -126,7 +126,7 @@
             <p>William Morris</p>
             <p>{{ loc['contact_5'] }}: wmorris@live.no</p>
             {% if lang == 'NO' %}
-            <p>Telefon: 123 45 678</p>
+            <p>Telefon: 905 22 339</p>
             {% endif %}
         </div>
     </div>
