Fix contact max width

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -82,52 +82,54 @@
 </div>
 <div class="footer">
     <h3 class="title">{{ loc['contact_0'] }}</h3>
-    <div class="contact">
-        <div>
-            <p>{{ loc['contact_1'] }}:</p>
+    <div class="contact-wrap">
+        <div class="contact">
+            <div>
+                <p>{{ loc['contact_1'] }}:</p>
+            </div>
+            <div>
+                <p>Ann Helen Brendehaug</p>
+                <p>{{ loc['contact_5'] }}: annhelen@bokvennen.no</p>
+                {% if lang == 'NO' %}
+                <p>Telefon: 915 84 783</p>
+                {% endif %}
+            </div>
         </div>
-        <div>
-            <p>Ann Helen Brendehaug</p>
-            <p>{{ loc['contact_5'] }}: annhelen@bokvennen.no</p>
-            {% if lang == 'NO' %}
-            <p>Telefon: 915 84 783</p>
-            {% endif %}
+        <div class="contact">
+            <div>
+                <p>{{ loc['contact_2'] }}:</p>
+            </div>
+            <div>
+                <p>Stephen Andrew Ramthun</p>
+                <p>{{ loc['contact_5'] }}: stephenramthun@gmail.com</p>
+                {% if lang == 'NO' %}
+                <p>Telefon: 454 63 747</p>
+                {% endif %}
+            </div>
         </div>
-    </div>
-    <div class="contact">
-        <div>
-            <p>{{ loc['contact_2'] }}:</p>
+        <div class="contact">
+            <div>
+                <p>{{ loc['contact_3'] }}:</p>
+            </div>
+            <div>
+                <p>Miriam Mackmin</p>
+                <p>{{ loc['contact_5'] }}:</p>
+                {% if lang == 'NO' %}
+                <p>Telefon: (+44) 7435 123308</p>
+                {% endif %}
+            </div>
         </div>
-        <div>
-            <p>Stephen Andrew Ramthun</p>
-            <p>{{ loc['contact_5'] }}: stephenramthun@gmail.com</p>
-            {% if lang == 'NO' %}
-            <p>Telefon: 454 63 747</p>
-            {% endif %}
-        </div>
-    </div>
-    <div class="contact">
-        <div>
-            <p>{{ loc['contact_3'] }}:</p>
-        </div>
-        <div>
-            <p>Miriam Mackmin</p>
-            <p>{{ loc['contact_5'] }}:</p>
-            {% if lang == 'NO' %}
-            <p>Telefon: (+44) 7435 123308</p>
-            {% endif %}
-        </div>
-    </div>
-    <div class="contact">
-        <div>
-            <p>{{ loc['contact_4'] }} / toastmaster:</p>
-        </div>
-        <div>
-            <p>William Morris</p>
-            <p>{{ loc['contact_5'] }}: wmorris@live.no</p>
-            {% if lang == 'NO' %}
-            <p>Telefon: 905 22 339</p>
-            {% endif %}
+        <div class="contact">
+            <div>
+                <p>{{ loc['contact_4'] }} / toastmaster:</p>
+            </div>
+            <div>
+                <p>William Morris</p>
+                <p>{{ loc['contact_5'] }}: wmorris@live.no</p>
+                {% if lang == 'NO' %}
+                <p>Telefon: 905 22 339</p>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
