--- a/app/static/style.css
+++ b/app/static/style.css
@@ -266,12 +266,12 @@ ul {
 }
 
 .contact div:nth-child(odd) {
-    width: 40%;
+    width: 30%;
     text-align: right;
 }
 
 .contact div:nth-child(even) {
-    width: 60%;
+    width: 70%;
 }
 
 .contact div:last-child {
@@ -279,9 +279,16 @@ ul {
 }
 
 .contact p {
-    margin-right: 10px;
-    margin-left: 10px;
+    margin: 0px 10px 0px 10px;
     color: white;
+}
+
+.contact-wrap {
+    position: relative;
+    max-width: 800px;
+    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .error {
