--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,9 @@
 
     <body>
         {% if authenticated %}
-        <img id="banner" src="static/banner.png"></div>
+        <div id="banner">
+            <h3 id="banner-title">ANN HELEN<br>+<br>STEPHEN</h3>
+        </div>
         {% endif %}
         <div class="background-wrapper">
             <div class="background sky">
