--- a/app/static/style.css
+++ b/app/static/style.css
@@ -306,6 +306,10 @@ ul {
     color: red;
 }
 
+#registered_email {
+    color: #ffb1b1;
+}
+
 @media only screen and (max-width: 900px) {
     .contact {
         width: 100%;
