Redo text, add section and link to map

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -59,6 +59,14 @@ ul {
     padding: 0;
 }
 
+a:link {
+    color: #ffb1b1;
+}
+
+a:visited {
+    color: #ffb1b1;
+}
+
 #mountains {
     position: absolute;
     left: 50%;
