--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -31,6 +31,13 @@
         <p>{{ loc['reception_body_2'] }}</p>
     </div>
     <div class="container">
+        <h3 class="title">{{ loc['barbeque_header'] }}</h3>
+        <p>{{ loc['barbeque1'] }}</p>
+        <p>{{ loc['barbeque2'] }} <a href="https://goo.gl/maps/NP4e8eVkddJ2" target="_blank">{{ loc['barbeque5' ]}}</a></p>
+        <p>{{ loc['barbeque3'] }}</p>
+        <p>{{ loc['barbeque4'] }}</p>
+    </div>
+    <div class="container">
         <h3 class="title">{{ loc['accomodation_header'] }}</h3>
         <p>{{ loc['accomodation_body'] }}</p>
     </div>
