Fix text and email

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,5 +1,15 @@
 <h1>RSVP</h1>
 <p>{{ loc['reg_answer_1'] }}</p>
+{% if email %}
+<p>{{ loc['reg_answer_5'] }} <a id="registered_email">{{ email }}</a></p>
+<p>{{ loc['reg_answer_6'] }}</p>
+{% else %}
+<p>{{ loc['reg_answer_4'] }}</p>
+{% endif %}
+<form id="email_form" action="/email" method="post">
+    {{ email_form.hidden_tag() }}
+    <p>{{ email_form.email(placeholder = loc['contact_5']) }}<input type="submit" value="{{ loc['reg_9'] }}"</p>
+</form>
 <p>{{ loc['reg_answer_2'] }}</p>
 <div>
     <a>{{ loc['reg'] }}</a>
