--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -44,6 +44,9 @@
     <div class="container">
         <h3 class="title">{{ loc['gifts_header'] }}</h3>
         <p>{{ loc['gifts_body'] }}</p>
+        {% if lang == 'NO' %}
+        <p><a href="https://www.cg.no/weddinglist/index/shared/weddinglist_id/8449/">Bryllupslisten</a></p>
+        {% endif %}
     </div>
     <div id="rsvp" class="container rsvp">
         <h1>RSVP</h1>
@@ -78,6 +81,7 @@
                 <p>{{ form.first_name(placeholder = loc['reg_1']) }}</p>
                 <p>{{ form.last_name(placeholder = loc['reg_2']) }}</p>
                 <p>{{ form.allergies(placeholder = loc['reg_3']) }}</p>
+                <p>{{ loc['reg_7'] }}</p>
                 <p>{{ form.vegetarian() }} {{ loc['reg_4'] }}</p>
                 <p>{{ form.vegan() }} {{ loc['reg_5'] }}</p>
                 <p>{{ form.kids_menu() }} {{ loc['reg_6'] }}</p>
