Fix register text

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,6 +28,7 @@
         <p>{{ form.first_name(placeholder = loc['reg_1']) }}</p>
         <p>{{ form.last_name(placeholder = loc['reg_2']) }}</p>
         <p>{{ form.allergies(placeholder = loc['reg_3']) }}</p>
+        <p>{{ loc['reg_7'] }}</p>
         <p>{{ form.vegetarian() }} {{ loc['reg_4'] }}</p>
         <p>{{ form.vegan() }} {{ loc['reg_5'] }}</p>
         <p>{{ form.kids_menu() }} {{ loc['reg_6'] }}</p>
